- skip bound changes for cutoff subtree in treeApplyPendingBdchgs()
- correct detection of doublelex matrices and handling them via orbitope constraints
- skip attempting to free transformed problem if SCIPtransformProb() failed with an error in SCIPpresolve(), since freeing
  the transformed problem is likely to fail as well

Build system
------------

### CMake

### Makefile

Miscellaneous
-------------

@section RN923 SCIP 9.2.3
*************************

Fixed bugs
----------

- avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks
- when upgrading to xor constraint require parity variable to be enforced integral
- provide the depth of the applied effective root with SCIPtreeGetEffectiveRootDepth() to avert invalid globalization of constraint set changes
- disable objective limit during lexicographic dual minimization to preserve feasibility status
- declare infinite bound inference infeasible in SCIPinferVarLbCons() and SCIPinferVarUbCons() to maintain correct loose LP values
- fixed update of consssorted flags in a variable expressions data when adding an additional constraint using this variable
- corrected computation of number of variables affected by symmetry
- fixed computation of symmetry group size
- correct comparison conditions in checkRedundancySide() of cons_varbound.c to ensure pair redundancy
- also for the initial LP solve force acceptance of Farkas row in SCIPlpGetDualfarkas() if all other means for obtaining a reliable Farkas proof have failed
- avoid overwriting the cutoff flag in tightenCoefs(), preprocessConstraintPairs(), and applyFixings() of cons_varbound.c to reject infeasible solutions
- fix memory leak in CppAD interface w.r.t. user expressions
- adjust bound before checking feasibility in SCIPvarAddVlb() and SCIPvarAddVub() to detect integrality cutoff